--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.5.2",
+    "koa-redis-cache": "^3.0.1",
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
