--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prestart": "npm run build",
     "start": "node dist/server.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
