--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.0.7",
+    "apollo-server-koa": "^2.0.6",
     "axios": "^0.18.0",
+    "graphql": "^14.0.2",
     "koa": "^2.5.2",
     "koa-redis-cache": "^3.0.1",
     "koa-router": "^7.4.0",
